--- a/estilos.css
+++ b/estilos.css
@@ -1,11 +1,14 @@
 *{
-	margin:0;
+	margin top:50px;
 	padding:0;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing:border-box;
 }
 
 body{
-	background:#C92B0C;
-	font-family:Arial;
+	background: url(Perurojo.jpg) no-repeat fixed center center #333;
+	background-size: cover;
 }
 
 .contenedor{
@@ -19,7 +22,7 @@ header{
 	margin:20px 0;
 }
 
-header h1{
+header h1{	
 	color:#fff;
 	padding:20px 0;
 	text-align:center;
