--- a/Regiones.css
+++ b/Regiones.css
@@ -28,3 +28,47 @@ float:left;
 display:;
 postition:absolute;
 }
+
+.slider{
+	width: 95%;
+	margin: auto;
+}
+
+.slider ul{
+	display: flex;
+	padding: 0;
+	width:1500%;
+	animation: cambio 50s infinite;
+}
+
+
+.slider li{
+	width: 100%;
+	list-style: none;
+}
+
+.slider img{
+	width: 100%;
+	height: 100%;
+}
+
+
+@keyframes cambio{
+	0%{margin-left: 0%;}
+	7%{margin-left: -100%;}
+	13%{margin-left: -200%;}
+	20%{margin-left: -300%;}
+	26%{margin-left:-400%;}
+	32%{margin-left:-500%;}
+	38%{margin-left:-600%;}
+	44%{margin-left:-700%;}
+	50%{margin-left:-800%;}
+	56%{margin-left:-900%;}
+	63%{margin-left:-1000%;}
+	70%{margin-left:-1100%;}
+	76%{margin-left:-1200%;}
+	82%{margin-left:-1300%;}
+	88%{margin-left:-1400%;}
+	100%{margin-left:-1500%;}
+}
+
