--- a/estilos.css
+++ b/estilos.css
@@ -12,7 +12,7 @@ body{
 }
 
 .contenedor{
-	width:100%;
+	width:500px;
 	margin:0 auto;
 	overflow:hidden;
 }
@@ -28,8 +28,18 @@ header h1{
 	text-align:center;
 }
 
+div#formulario{
+position: fixed;
+background: #1158C2;
+top: 200px;
+left: 20px;
+padding: 20px;
+width: 400px;
+height: 500px;
+}
+
 .main{
-	width:300px;
+	width:287px;
 	background:#fff;
 	padding:20px;
 	float: left;
@@ -42,7 +52,7 @@ header h1{
 }
 
 aside{
-	width:200px;
+	width:213px;
 	padding:20px;
 	box-sizing:border-box;
 	background:#ccc;
